septimo commit del proyecto

--- a/pagina_de_contactos.html
+++ b/pagina_de_contactos.html
@@ -31,48 +31,46 @@
             </header>
             <main class="cuerpo">
                 <h2 class="cuerpo__titulo">PAGINA DE CONTACTOS</h2>
-                <section class="cuerpo__caja-formulario">
+                <article class="cuerpo__caja-formulario">
                     <a href="assets/img/sonic.gif"><img src="assets/img/sonic.gif" alt="Sonic Mania" class="cuerpo__caja-formulario__imagen-formulario"></a>
-                    <article>
-                        <h3  class="cuerpo__caja-formulario__subtitulo">formulario</h3>
-                        <form action="/submit" method="POST" class="cuerpo__caja-formulario__formulario">
-                            <label class="cuerpo__caja-formulario__formulario__campos">
-                                nombre y apellidos
-                                <input type="text" name="nombre" class="cuerpo_">
-                            </label>
-                            <label class="cuerpo__caja-formulario__formulario__campos">
-                                edad
-                                <input type="number" name="edad">
-                            </label>
-                            <label class="cuerpo__caja-formulario__formulario__campos">
-                                fecha de nacimiento
-                                <input type="date" name="fecha">
-                            </label>
-                            <label class="cuerpo__caja-formulario__formulario__campos">
-                                genero
-                                <select name="genero">
-                                    <option value="sin especificar">sin especificar</option>
-                                    <option value="hombre">hombre</option>
-                                    <option value="mujer">mujer</option>
-                                </select>
-                            </label>
-                            <label class="cuerpo__caja-formulario__formulario__campos">
-                                correo electronico
-                                <input type="text" name="correo">
-                            </label>
-                            <label class="cuerpo__caja-formulario__formulario__campo-termino">
-                                acepto los terminos de privacidad y condiciones de servicio
-                                <input type="checkbox" name="terminos" value="terminos">
-                            </label>
-                            <label class="cuerpo__caja-formulario__formulario__campo-comfirmacion">
-                                <input type="submit" name="enviar" value="enviar formulario">
-                            </label>
-                            <label class="cuerpo__caja-formulario__formulario__campo-comfirmacion">
-                                <input type="reset" name="borrar" value="borrar formulario">
-                            </label>
-                        </form>
-                    </article>
-                </section>
+                    <h3 class="cuerpo__caja-formulario__subtitulo">formulario</h3>
+                    <form action="/submit" method="POST" class="cuerpo__caja-formulario__formulario">
+                        <label class="cuerpo__caja-formulario__formulario__campos">
+                            nombre y apellidos
+                            <input type="text" name="nombre" class="cuerpo_">
+                        </label>
+                        <label class="cuerpo__caja-formulario__formulario__campos">
+                            edad
+                            <input type="number" name="edad">
+                        </label>
+                        <label class="cuerpo__caja-formulario__formulario__campos">
+                            fecha de nacimiento
+                            <input type="date" name="fecha">
+                        </label>
+                        <label class="cuerpo__caja-formulario__formulario__campos">
+                            genero
+                            <select name="genero">
+                                <option value="sin especificar">sin especificar</option>
+                                <option value="hombre">hombre</option>
+                                <option value="mujer">mujer</option>
+                            </select>
+                        </label>
+                        <label class="cuerpo__caja-formulario__formulario__campos">
+                            correo electronico
+                            <input type="text" name="correo">
+                        </label>
+                        <label class="cuerpo__caja-formulario__formulario__campo-termino">
+                            acepto los terminos de privacidad y condiciones de servicio
+                            <input type="checkbox" name="terminos" value="terminos">
+                        </label>
+                        <label class="cuerpo__caja-formulario__formulario__campo-comfirmacion">
+                            <input type="submit" name="enviar" value="enviar formulario">
+                        </label>
+                        <label class="cuerpo__caja-formulario__formulario__campo-comfirmacion">
+                            <input type="reset" name="borrar" value="borrar formulario">
+                        </label>
+                    </form>
+                </article>
                 <nav class="cuerpo__redes">
                     <h3 class="cuerpo__redes__subtitulo">sigueme en mis redes sociales: </h3>
                     <a href="https://www.facebook.com/cesargabriel.ucha/"><img src="./assets/img/facebook_logo.png" alt="Facebook" class="cuerpo__redes__red"></a>
