--- a/sonic_colors.html
+++ b/sonic_colors.html
@@ -22,10 +22,10 @@
                         <i class="cabecera__navegador__icono-menu__barra3"></i>
                     </label>
                     <ul class="cabecera__navegador__enlaces">
-                        <li><a href="pagina_principal.html">pagina principal</a></li>
-                        <li><a href="pagina_de_productos.html">productos</a></li>
-                        <li><a href="pagina_de_contactos.html">pagina de contactos</a></li>
-                        <li><a href="pagina_adicional.html">contenido extra</a></li>
+                        <li><a href="pagina_principal.html">Pagina principal</a></li>
+                        <li><a href="pagina_de_productos.html">Productos</a></li>
+                        <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
+                        <li><a href="pagina_adicional.html">Contenido extra</a></li>
                     </ul>
                 </nav>
             </header>
