--- a/sonic_mania.html
+++ b/sonic_mania.html
@@ -22,10 +22,10 @@
                         <i class="cabecera__navegador__icono-menu__barra3"></i>
                     </label>
                     <ul class="cabecera__navegador__enlaces">
-                        <li><a href="pagina_principal.html">pagina principal</a></li>
-                        <li><a href="pagina_de_productos.html">productos</a></li>
-                        <li><a href="pagina_de_contactos.html">pagina de contactos</a></li>
-                        <li><a href="pagina_adicional.html">contenido extra</a></li>
+                        <li><a href="pagina_principal.html">Pagina principal</a></li>
+                        <li><a href="pagina_de_productos.html">Productos</a></li>
+                        <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
+                        <li><a href="pagina_adicional.html">Contenido extra</a></li>
                     </ul>
                 </nav>
             </header>
@@ -42,22 +42,22 @@
                 <h2 class="cuerpo__titulo">OTROS PRODUCTOS</h2>
                 <section class="cuerpo__productos">
                     <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_unleashed.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic unleashed</a></h3>
+                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_frontiers.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic frontiers</a></h3>
                     </article>
                     <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_mania.png" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_mania.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic mania</a></h3>
+                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_x_shadow_generations.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic y Shadow generations</a></h3>
                     </article>
                 </section>
                 <section class="cuerpo__productos">
                     <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_superstars.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic superstars</a></h3>
+                        <a href="assets/img/sonic_colors.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_colors.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic colors</a></h3>
                     </article>
                     <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_forces.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_forces.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic forces</a></h3>
+                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_lost_world.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic lost world</a></h3>
                     </article>
                 </section>
             </main>
