--- a/sonic_unleashed.html
+++ b/sonic_unleashed.html
@@ -22,10 +22,10 @@
                         <i class="cabecera__navegador__icono-menu__barra3"></i>
                     </label>
                     <ul class="cabecera__navegador__enlaces">
-                        <li><a href="pagina_principal.html">pagina principal</a></li>
-                        <li><a href="pagina_de_productos.html">productos</a></li>
-                        <li><a href="pagina_de_contactos.html">pagina de contactos</a></li>
-                        <li><a href="pagina_adicional.html">contenido extra</a></li>
+                        <li><a href="pagina_principal.html">Pagina principal</a></li>
+                        <li><a href="pagina_de_productos.html">Productos</a></li>
+                        <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
+                        <li><a href="pagina_adicional.html">Contenido extra</a></li>
                     </ul>
                 </nav>
             </header>
@@ -43,7 +43,7 @@
                 <section class="cuerpo__productos">
                     <article class="cuerpo__productos__producto">
                         <a href="assets/img/sonic_frontiers.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_frontiers.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic Frontiers</a></h3>
+                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_frontiers.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic frontiers</a></h3>
                     </article>
                     <article class="cuerpo__productos__producto">
                         <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
