noveno commit del proyecto

--- a/pagina_adicional.html
+++ b/pagina_adicional.html
@@ -29,11 +29,11 @@
                     </ul>
                 </nav>
             </header>
-            <main class="cuerpo">
-                <h2 class="cuerpo__titulo">SONIC Y EL AUTISMO</h2>
-                <article class="cuerpo__caja">
-                    <h3 class="cuerpo__caja__subtitulo">¿Por qué a las personas autistas les gusta Sonic?</h3>
-                    <p class="cuerpo__caja__texto">Mucha gente está familiarizada con el personaje Sonic the Hedgehog, pero ¿sabías que es particularmente popular entre las personas autistas? De hecho, incluso existe un término para este fenómeno: "patología sónica". Si bien las razones detrás de esta afinidad no se comprenden completamente, existen algunas teorías sobre por qué las personas autistas podrían sentirse atraídas por el erizo azul.</p>
+            <main class="cuerpo3">
+                <h2 class="cuerpo3__titulo">SONIC Y EL AUTISMO</h2>
+                <article class="cuerpo3__caja">
+                    <h3 class="cuerpo3__caja__subtitulo">¿Por qué a las personas autistas les gusta Sonic?</h3>
+                    <p class="cuerpo3__caja__texto">Mucha gente está familiarizada con el personaje Sonic the Hedgehog, pero ¿sabías que es particularmente popular entre las personas autistas? De hecho, incluso existe un término para este fenómeno: "patología sónica". Si bien las razones detrás de esta afinidad no se comprenden completamente, existen algunas teorías sobre por qué las personas autistas podrían sentirse atraídas por el erizo azul.</p>
                 </article>
             </main>
             <footer class="pie">
