--- a/pagina_de_contactos.html
+++ b/pagina_de_contactos.html
@@ -32,7 +32,7 @@
             <main class="cuerpo">
                 <h2 class="cuerpo__titulo">PAGINA DE CONTACTOS</h2>
                 <section class="cuerpo__seccion-formulario">
-                    <h3 class="cuerpo__seccion-formulario__subtitulo">formulario</h3>
+                    <h3 class="cuerpo__seccion-formulario__subtitulo">Formulario</h3>
                     <article class="cuerpo__seccion-formulario__caja-formulario">
                         <a href="assets/img/sonic.gif"><img src="assets/img/sonic.gif" alt="Sonic Mania" class="cuerpo__seccion-formulario__caja-formulario__imagen-formulario"></a>
                         <form action="/submit" method="POST" class="cuerpo__seccion-formulario__caja-formulario__formulario">
