--- a/sonic_x_shadow_generations.html
+++ b/sonic_x_shadow_generations.html
@@ -29,34 +29,34 @@
                     </ul>
                 </nav>
             </header>
-            <main class="cuerpo">
-                <section class="cuerpo__informacion-producto">
-                    <a href="assets/img/sonic_x_shadow_generations.jpg"  class="cuerpo__informacion-producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo__informacion-producto__imagen-producto__imagen"></a>
-                    <article class="cuerpo__informacion-producto__descripcion-producto">
-                        <h3 class="cuerpo__informacion-producto__descripcion-producto__nombre-producto">Sonic x Shadow generations</h3>
-                        <p class="cuerpo__informacion-producto__descripcion-producto__descripcion">Sonic X Shadow Generations es una remasterización de juego complementario de la versión para consola/PC de Sonic Generations desarrollado por Sonic Team, que incluye un nuevo contenido adicional llamado Shadow Generations</p>
-                        <p class="cuerpo__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo__informacion-producto__boton__regreso">volver</a></p>
+            <main class="cuerpo2">
+                <section class="cuerpo2__informacion-producto">
+                    <a href="assets/img/sonic_x_shadow_generations.jpg"  class="cuerpo2__informacion-producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__informacion-producto__imagen-producto__imagen"></a>
+                    <article class="cuerpo2__informacion-producto__descripcion-producto">
+                        <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic x Shadow generations</h3>
+                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic X Shadow Generations es una remasterización de juego complementario de la versión para consola/PC de Sonic Generations desarrollado por Sonic Team, que incluye un nuevo contenido adicional llamado Shadow Generations</p>
+                        <p class="cuerpo2__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton__regreso">volver</a></p>
                     </article>
                 </section>
-                <h2 class="cuerpo__titulo">OTROS PRODUCTOS</h2>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_unleashed.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic unleashed</a></h3>
+                <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_unleashed.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic unleashed</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_mania.png" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_mania.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic mania</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_mania.png" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_mania.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic mania</a></h3>
                     </article>
                 </section>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_superstars.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic superstars</a></h3>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_superstars.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic superstars</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_forces.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_forces.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic forces</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_forces.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_forces.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic forces</a></h3>
                     </article>
                 </section>
             </main>
