--- a/pagina_de_productos.html
+++ b/pagina_de_productos.html
@@ -29,46 +29,46 @@
                     </ul>
                 </nav>
             </header>
-            <main class="cuerpo">
-                <h2 class="cuerpo__titulo">PAGINA DE PRODUCTOS</h2>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_frontiers.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic frontiers</a></h3>
+            <main class="cuerpo2">
+                <h2 class="cuerpo2__titulo">PAGINA DE PRODUCTOS</h2>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_frontiers.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic frontiers</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_x_shadow_generations.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic y Shadow generations</a></h3>
-                    </article>
-                </section>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_colors.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_colors.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic colors</a></h3>
-                    </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_lost_world.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic lost world</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_x_shadow_generations.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic y Shadow generations</a></h3>
                     </article>
                 </section>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_unleashed.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic unleashed</a></h3>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_colors.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_colors.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic colors</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_mania.png" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_mania.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic mania</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_lost_world.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic lost world</a></h3>
                     </article>
                 </section>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_superstars.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic superstars</a></h3>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_unleashed.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic unleashed</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_forces.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_forces.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic forces</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_mania.png" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_mania.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic mania</a></h3>
+                    </article>
+                </section>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_superstars.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic superstars</a></h3>
+                    </article>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_forces.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_forces.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic forces</a></h3>
                     </article>
                 </section>
             </main>
