--- a/sonic_frontiers.html
+++ b/sonic_frontiers.html
@@ -29,35 +29,35 @@
                     </ul>
                 </nav>
             </header>
-            <main class="cuerpo">
-                <section class="cuerpo__informacion-producto">
-                    <a href="assets/img/sonic_frontiers.jpg" class="cuerpo__informacion-producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo__informacion-producto__imagen-producto__imagen"></a>
-                    <article class="cuerpo__informacion-producto__descripcion-producto">
-                        <h3 class="cuerpo__informacion-producto__descripcion-producto__nombre-producto">Sonic frontiers</h3>
-                        <p class="cuerpo__informacion-producto__descripcion-producto__descripcion">Sonic Frontiers es un juego de la serie Sonic the Hedgehog que se lanzó el 8 de noviembre de 2022 en celebración del 30 aniversario de la franquicia. El juego fue desarrollado por Sonic Team y publicado por Sega. Está disponible para PlayStation 5, PlayStation 4, Xbox Series X y Series S, Xbox One, Nintendo Switch y PC.</p>
-                        <p class="cuerpo__informacion-producto__descripcion-producto__descripcion">El juego marca la primera experiencia de juego inspirada en zonas abiertas en la serie Sonic, donde los jugadores podrán explorar paisajes exuberantes y expansivos utilizando la velocidad y las habilidades características de Sonic. La trama en sí ha sido escrita por Ian Flynn, el guionista principal de varios de los spin-offs de la serie Sonic.</p>
-                        <p class="cuerpo__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo__informacion-producto__boton__regreso">volver</a></p>
+            <main class="cuerpo2">
+                <section class="cuerpo2__informacion-producto">
+                    <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__informacion-producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__informacion-producto__imagen-producto__imagen"></a>
+                    <article class="cuerpo2__informacion-producto__descripcion-producto">
+                        <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic frontiers</h3>
+                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Frontiers es un juego de la serie Sonic the Hedgehog que se lanzó el 8 de noviembre de 2022 en celebración del 30 aniversario de la franquicia. El juego fue desarrollado por Sonic Team y publicado por Sega. Está disponible para PlayStation 5, PlayStation 4, Xbox Series X y Series S, Xbox One, Nintendo Switch y PC.</p>
+                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">El juego marca la primera experiencia de juego inspirada en zonas abiertas en la serie Sonic, donde los jugadores podrán explorar paisajes exuberantes y expansivos utilizando la velocidad y las habilidades características de Sonic. La trama en sí ha sido escrita por Ian Flynn, el guionista principal de varios de los spin-offs de la serie Sonic.</p>
+                        <p class="cuerpo2__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton__regreso">volver</a></p>
                     </article>
                 </section>
-                <h2 class="cuerpo__titulo">OTROS PRODUCTOS</h2>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_unleashed.html" class="cuerpo__productos__producto__nombre-producto">Sonic unleashed</a></h3>
+                <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_unleashed.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic unleashed</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_mania.png" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_mania.html" class="cuerpo__productos__producto__nombre-producto">Sonic mania</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_mania.png" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_mania.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic mania</a></h3>
                     </article>
                 </section>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_superstars.html" class="cuerpo__productos__producto__nombre-producto">Sonic superstars</a></h3>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_superstars.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic superstars</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_forces.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_forces.html" class="cuerpo__productos__producto__nombre-producto">Sonic forces</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_forces.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_forces.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic forces</a></h3>
                     </article>
                 </section>
             </main>
