--- a/sonic_superstars.html
+++ b/sonic_superstars.html
@@ -29,35 +29,35 @@
                     </ul>
                 </nav>
             </header>
-            <main class="cuerpo">
-                <section class="cuerpo__informacion-producto">
-                    <a href="assets/img/sonic_superstars.jpg" class="cuerpo__informacion-producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo__informacion-producto__imagen-producto__imagen"></a>
-                    <article class="cuerpo__informacion-producto__descripcion-producto">
-                        <h3 class="cuerpo__informacion-producto__descripcion-producto__nombre-producto">Sonic superstars</h3>
-                        <p class="cuerpo__informacion-producto__descripcion-producto__descripcion">Sonic Superstars es un videojuego de la serie Sonic the Hedgehog. Es un juego de plataformas en 2D, similar a las entradas de Sega Mega Drive, y sigue a Sonic, Tails, Amy y Knuckles mientras exploran las místicas Northstar Islands para derrotar al Dr. Eggman, quien se ha asociado con el travieso cazarrecompensas Fang the Sniper. para derrotar a los héroes.</p>
-                        <p class="cuerpo__informacion-producto__descripcion-producto__descripcion">En particular, el juego contará con un nuevo personaje creado por el diseñador original de Sonic, Naoto Ōshima, y un "nuevo y misterioso adversario", aunque se desconoce si estos son personajes separados o uno en el mismo.</p>
-                        <p class="cuerpo__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo__informacion-producto__boton__regreso">volver</a></p>
+            <main class="cuerpo2">
+                <section class="cuerpo2__informacion-producto">
+                    <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__informacion-producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__informacion-producto__imagen-producto__imagen"></a>
+                    <article class="cuerpo2__informacion-producto__descripcion-producto">
+                        <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic superstars</h3>
+                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Superstars es un videojuego de la serie Sonic the Hedgehog. Es un juego de plataformas en 2D, similar a las entradas de Sega Mega Drive, y sigue a Sonic, Tails, Amy y Knuckles mientras exploran las místicas Northstar Islands para derrotar al Dr. Eggman, quien se ha asociado con el travieso cazarrecompensas Fang the Sniper. para derrotar a los héroes.</p>
+                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">En particular, el juego contará con un nuevo personaje creado por el diseñador original de Sonic, Naoto Ōshima, y un "nuevo y misterioso adversario", aunque se desconoce si estos son personajes separados o uno en el mismo.</p>
+                        <p class="cuerpo2__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton__regreso">volver</a></p>
                     </article>
                 </section>
-                <h2 class="cuerpo__titulo">OTROS PRODUCTOS</h2>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_frontiers.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic frontiers</a></h3>
+                <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_frontiers.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic frontiers</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_x_shadow_generations.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic y Shadow generations</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_x_shadow_generations.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic y Shadow generations</a></h3>
                     </article>
                 </section>
-                <section class="cuerpo__productos">
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_colors.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_colors.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic colors</a></h3>
+                <section class="cuerpo2__productos">
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_colors.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_colors.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic colors</a></h3>
                     </article>
-                    <article class="cuerpo__productos__producto">
-                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo__productos__producto__boton"><a href="./sonic_lost_world.html" class="cuerpo__productos__producto__boton__nombre-producto">Sonic lost world</a></h3>
+                    <article class="cuerpo2__productos__producto">
+                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
+                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_lost_world.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic lost world</a></h3>
                     </article>
                 </section>
             </main>
